--- a/index.html
+++ b/index.html
@@ -6,4 +6,7 @@
 </head>
 <body>
 	<h1>Belajar Git Dan Github</h1>
+	<h3>#1 perintah: git clone <i>url<i></h3>
+	<h3>perintah git config</h3>
+	git conflict
 </body>
